--- a/src/stylesheets/PlayerStats.scss
+++ b/src/stylesheets/PlayerStats.scss
@@ -31,6 +31,8 @@
 
     @include input-element();
     .base-input {
+      color: white;
+      text-shadow: 0px 0px 5px black;
       display: flex;
       flex-direction: column;
       text-align: center;
